<resources>
    <string name="app_name">Grades</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hello">Hello World, Click Me!</string>
    <string name="ApplicationName">Grades</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navTitle_home">Home</string>
    <string name="navTitle_schedule">Schedule</string>
    <string name="navTitle_grades">Grades</string>
    <string name="navTitle_profile">Profile</string>
    <string name="navTitle_logoff">Log off</string>
    <string name="navTitle_settings">Settings</string>
    <string name="navTitle_about">About</string>
    <string name="title_activity_loading_screen">LoadingScreenActivity</string>
</resources>
