<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:title="@string/navTitle_today" />
        <item
            android:id="@+id/nav_fullSchedule"
            android:title="@string/navTitle_schedule" />
        <item
            android:id="@+id/nav_grades"
            android:title="@string/navTitle_grades" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/navTitle_profile" />
    </group>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/navTitle_settings" />
    <item
        android:id="@+id/nav_logoff"
        android:title="@string/navTitle_logoff" />
</menu>